# HAC-SLAM-ICRA

./: .gitattributes  .gitignore
AfterTests/HAC-SLAM/: App.cpp  App.h  HAC-SLAM.vcxproj  HAC-SLAM.vcxproj.filters  Main.cpp  Package.appxmanifest  Unity Data.vcxitems.filters
AfterTests/HAC-SLAM-2/: App.cpp  App.h  HAC-SLAM-2.vcxproj  HAC-SLAM-2.vcxproj.filters  Main.cpp  Package.appxmanifest  Unity Data.vcxitems  Unity Data.vcxitems.filters
AfterTests/HAC-SLAM-2/Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets  sharedassets0.assets
AfterTests/HAC-SLAM-2/Data/Resources/: unity_builtin_extra
AfterTests/HAC-SLAM-2/Managed/: EditorToUnityLinkerData.json  MethodsToPreserve.xml  SerializedTypes.xml  TypesInScenes.xml  Windows.Foundation.UniversalApiContract.winmd  response.rsp
AfterTests/HAC-SLAM/Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets  sharedassets0.assets
AfterTests/HAC-SLAM/Managed/: EditorToUnityLinkerData.json  MethodsToPreserve.xml  TypesInScenes.xml  response.rsp
AfterTests/Il2CppOutputProject/: Il2CppOutputProject.vcxproj  Il2CppOutputProject.vcxproj.filters
AfterTests/Il2CppOutputProject/Source/: BuildCommands.txt  profile.json
AfterTests/Il2CppOutputProject/Source/il2cppOutput/: Assembly-CSharp.cpp  Assembly-CSharp1.cpp  Assembly-CSharp_CodeGen.c  GenericMethods.cpp  GenericMethods1.cpp  GenericMethods10.cpp  GenericMethods11.cpp  GenericMethods12.cpp  GenericMethods13.cpp  GenericMethods14.cpp  GenericMethods15.cpp  GenericMethods16.cpp  GenericMethods17.cpp  GenericMethods2.cpp  GenericMethods3.cpp  GenericMethods4.cpp  GenericMethods6.cpp  GenericMethods7.cpp  GenericMethods8.cpp  GenericMethods9.cpp  Generics.cpp  Generics1.cpp  Generics10.cpp  Generics11.cpp  Generics12.cpp  Generics13.cpp  Generics14.cpp  Generics15.cpp  Generics16.cpp  Generics17.cpp  Generics18.cpp  Generics19.cpp  Generics2.cpp  Generics20.cpp  Generics21.cpp  Generics22.cpp  Generics23.cpp  Generics24.cpp  Generics25.cpp  Generics26.cpp  (+356 more)
AfterTests/Il2CppOutputProject/Source/lumpedcpp/: Lump_libil2cpp_codegen.cpp  Lump_libil2cpp_debugger.cpp  Lump_libil2cpp_gc.cpp  Lump_libil2cpp_icalls.cpp  Lump_libil2cpp_metadata.cpp  Lump_libil2cpp_mono.cpp  Lump_libil2cpp_os.cpp  Lump_libil2cpp_utils.cpp  Lump_libil2cpp_vm-utils.cpp  Lump_libil2cpp_vm.cpp
Assets/: FingerPose.cs  LabelerFingerPose.cs  MergedVoxelDisplay.cs  MinecraftBuilder.cs  MiniMap.cs  OnOff.cs  RosPublisherExample.cs  RosSubscriberExample.cs  TryingTrans.cs  msgbrowser_settings.asset  testingOverlap.cs
Assets/Materials/: Block 1.mat  Block 2.mat  Block 3.mat  Block.mat  GoodleMapsGuyMaterial.mat  MiniLocalize.mat  New Material 3.mat  New Material.mat  TESTY.mat  Transparent.mat  miaw.mat
Assets/MixedRealityToolkit.Generated/CustomProfiles/: New MixedRealityCameraProfile.asset  New MixedRealityInputSystemProfile.asset  New MixedRealityToolkitConfigurationProfile.asset
Assets/Prefabs/: GoogleMapsGuy.prefab  Minimap.prefab  MinimapLocalization.prefab  MinimapMerged.prefab  NewSelector3D.prefab  POI 1.prefab  POIPad 1.prefab  Voxel.prefab  VoxelMerged.prefab
Assets/Resources/: ROSConnectionPrefab.prefab
Assets/RosMessages/Mhy16/msg/: TransformationMsg.cs
Assets/Scenes/: SampleScene.unity  Version2.unity
Assets/Scripts/IP/: SetIPButtonText.cs
Assets/Scripts/Main/: LocalizationLogic.cs  MergedVoxelDisplay.cs  MinecraftBuilder.cs  RosPublisherExample.cs  RosSubscriberExample.cs  TEST.cs
Assets/Scripts/MiniMaps/: MiniMap.cs  MiniMapIncoming.cs  MiniMapLocalization.cs
Assets/Scripts/Octree Nadim/: Octree.cs  VoxelBehavior.cs
Assets/Scripts/Others/: FingerPose.cs  TryingTrans.cs  VoxelPool.cs
Assets/Scripts/POI/: NameOnPress.cs  POIButtonNameRetreiver.cs
Assets/XR/Settings/: OpenXR Package Settings.asset
HAC-SLAM/src/octomap_merger/: CMakeLists.txt
HAC-SLAM/src/pcl_downsampler/src/: downsampler_node.cpp
HAC-SLAM/src/pcl_filter/src/: filter_node.cpp
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
ROS/src/ROS-TCP-Endpoint-main-ros2/launch/: endpoint.py
ROS/src/pcl_downsampler/: package.xml
ROS/src_3DHolo/src/octomap_bt/: CMakeLists.txt
ROS/src_3DHolo/src/octomap_bt/src/: octo_reader_node.cpp
ROS/src_3dworks/src/e57_pcl/: package.xml  setup.cfg  setup.py
ROS/src_3dworks/src/octomap_bt/: CMakeLists.txt  package.xml
ROS/src_3dworks/src/octomap_bt/src/: bt_to_obj.cpp  octo_reader_node.cpp  octo_saver_caller.cpp
ROS/src_3dworks/src/octomap_merger/: package.xml
(+23 files in other folders)
